--- a/Index.html
+++ b/Index.html
@@ -34,34 +34,33 @@
         </nav>
     </header>
     <!-- Fin del Header -->
-    <main id="main" class="container">
-        <h1 class="title">Entre Perros</h1>
-        <section class="flex-row">
+    <main class="main container">
+        <h1 class="title container title__responsive">Entre Perros</h1>
+        <section class="flex-row column-responsive">
             <article class="text">
-                <p class="">Con orígenes musicales inspirados en el folk rock y con presencia de algunos temas reggae en su repertorio, actualmente transita el género canción. Su rock llegado como de otra época, es una de las más gratas sorpresas de la temporada y todo parece indicar que su popularidad va a seguir creciendo durante 2022. Entre Perros se formó en El Palomar en el año 2008. La agrupación está integrada por Damián Sabatino en guitarra y coros, Hernán Sánchez en voz, armónica y guitarra, Ariel Sciacchitano en batería, Gabriel Peralta en teclados y Guillermo Iannino en bajo.</p>
+                <p class="text__description">Con orígenes musicales inspirados en el folk rock y con presencia de algunos temas reggae en su repertorio, actualmente transita el género canción. Su rock llegado como de otra época, es una de las más gratas sorpresas de la temporada y todo parece indicar que su popularidad va a seguir creciendo durante 2022. Entre Perros se formó en El Palomar en el año 2008. La agrupación está integrada por Damián Sabatino en guitarra y coros, Hernán Sánchez en voz, armónica y guitarra, Ariel Sciacchitano en batería, Gabriel Peralta en teclados y Guillermo Iannino en bajo.</p>
             </article>
             <div class="iframe">
-                <iframe class="iframe__video" width="600" height="400" src="https://www.youtube.com/embed/Bnnghs4_deU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="iframe__video" width="560" height="315" src="https://www.youtube.com/embed/Bnnghs4_deU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
             </div>
         </section>
-        <br>
     </main>
-    <footer class="pieDePagina flex-row ">
-        <a class="pieDePagina__link container" href="https://www.instagram.com/entreperros_/" target="_blank">
-            <img class="pieDePagina__image container" src="Public/img/Icon/instagram-logo.png" alt="Instagram" style="width: 50px;">
-        </a>
-        <a class="pieDePagina__link container" href="https://es-la.facebook.com/EntrePerrosRock/" target="_blank">
-            <img class="pieDePagina__image container" src="Public/img/Icon/facebook-logo.png" alt="Facebook" style="width: 50px;">
-        </a>
-        <a class="pieDePagina__link container" href="https://www.youtube.com/channel/UCUHUxVZeduurLeg3hDQViow" target="_blank">
-            <img class="pieDePagina__image container" src="Public/img/Icon/youtube-logo.png" alt="Youtube" style="width: 50px;">
-        </a>
-        <a class="pieDePagina__link container" href="https://open.spotify.com/artist/4gyKdT8HV9uGvCTbRFA04M?si=q_hZ8-HGSDWm3PwPeySgLg" target="_blank">
-            <img class="pieDePagina__image container" src="Public/img/Icon/spotify-logo.png" alt="spotify" style="width: 50px;">
-        </a>
-        <section>
-            <p class="pieDePagina__derechos container">Todos los derechos reservados </p>
-        </section>
+    <footer>
+        <picture class="pieDePagina flex-row container">
+            <a class="pieDePagina__link container" href="https://www.instagram.com/entreperros_/" target="_blank">
+                <img class="pieDePagina__image container" src="Public/img/Icon/instagram-logo.png" alt="Instagram" style="width: 40px;">
+            </a>
+            <a class="pieDePagina__link container" href="https://es-la.facebook.com/EntrePerrosRock/" target="_blank">
+                <img class="pieDePagina__image container" src="Public/img/Icon/facebook-logo.png" alt="Facebook" style="width: 40px;">
+            </a>
+            <a class="pieDePagina__link container" href="https://www.youtube.com/channel/UCUHUxVZeduurLeg3hDQViow" target="_blank">
+                <img class="pieDePagina__image container" src="Public/img/Icon/youtube-logo.png" alt="Youtube" style="width: 40px;">
+            </a>
+            <a class="pieDePagina__link container" href="https://open.spotify.com/artist/4gyKdT8HV9uGvCTbRFA04M?si=q_hZ8-HGSDWm3PwPeySgLg" target="_blank">
+                <img class="pieDePagina__image container" src="Public/img/Icon/spotify-logo.png" alt="spotify" style="width: 40px;">
+            </a>
+        </picture>
+        <p class="pieDePagina__derechos container">Todos los derechos reservados </p>
     </footer>
 </body>
 </html>
