--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
             </picture>
             <ul class="menu flex-row">
                 <li class="menu__item">
-                    <a class="menu__link" href="Public/Views/Tour.html">Tour</a>
+                    <a class="menu__link" href="Public/Views/tour.html">Tour</a>
                 </li>
                 <li class="menu__item">
-                    <a class="menu__link" href="Public/Views/Discografía.html">Discografía</a>
+                    <a class="menu__link" href="Public/Views/discografia.html">Discografía</a>
                 </li>
                 <li class="menu__item">
-                    <a class="menu__link" href="Public/Views/Galería.html">Galería</a>
+                    <a class="menu__link" href="Public/Views/galeria.html">Galería</a>
                 </li>
                 <li class="menu__item">
-                    <a class="menu__link" href="Public/Views/Contacto.html">Contacto</a>
+                    <a class="menu__link" href="Public/Views/contacto.html">Contacto</a>
                 </li>
             </ul>
         </nav>
