Correccion enlaces final

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar flex-row container">
             <picture>
-                <a href="Index.html">
+                <a href="index.html">
                 <img class="logo" src="Public/img/Logo.png" alt="logo de Entre Perros" width="145px">
                 </a>
             </picture>
