--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="navbar flex-row container">
             <picture>
                 <a href="index.html">
-                <img class="logo" src="Public/img/Logo.png" alt="logo de Entre Perros" width="145px">
+                <img class="logo zoom" src="Public/img/Logo.png" alt="logo de Entre Perros" width="145px">
                 </a>
             </picture>
             <ul class="menu flex-row">
@@ -49,16 +49,16 @@
     <footer>
         <picture class="pieDePagina flex-row container">
             <a class="pieDePagina__link container" href="https://www.instagram.com/entreperros_/" target="_blank">
-                <img class="pieDePagina__image container" src="Public/img/Icon/instagram-logo.png" alt="Instagram" style="width: 40px;">
+                <img class="pieDePagina__image container zoom__redes" src="Public/img/Icon/instagram-logo.png" alt="Instagram" style="width: 40px;">
             </a>
             <a class="pieDePagina__link container" href="https://es-la.facebook.com/EntrePerrosRock/" target="_blank">
-                <img class="pieDePagina__image container" src="Public/img/Icon/facebook-logo.png" alt="Facebook" style="width: 40px;">
+                <img class="pieDePagina__image container zoom__redes" src="Public/img/Icon/facebook-logo.png" alt="Facebook" style="width: 40px;">
             </a>
             <a class="pieDePagina__link container" href="https://www.youtube.com/channel/UCUHUxVZeduurLeg3hDQViow" target="_blank">
-                <img class="pieDePagina__image container" src="Public/img/Icon/youtube-logo.png" alt="Youtube" style="width: 40px;">
+                <img class="pieDePagina__image container zoom__redes" src="Public/img/Icon/youtube-logo.png" alt="Youtube" style="width: 40px;">
             </a>
             <a class="pieDePagina__link container" href="https://open.spotify.com/artist/4gyKdT8HV9uGvCTbRFA04M?si=q_hZ8-HGSDWm3PwPeySgLg" target="_blank">
-                <img class="pieDePagina__image container" src="Public/img/Icon/spotify-logo.png" alt="spotify" style="width: 40px;">
+                <img class="pieDePagina__image container zoom__redes" src="Public/img/Icon/spotify-logo.png" alt="spotify" style="width: 40px;">
             </a>
         </picture>
         <p class="pieDePagina__derechos container">Todos los derechos reservados </p>
@@ -66,6 +66,6 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
-      </script>
+    </script>
 </body>
 </html>
