--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="banda, rock, banda de rock, musica, entre perros, gba oeste, indie, independiente, rock and roll">
+    <meta name="description" content="Entre Perros es una banda de rock de Palomar, Argentina.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/main.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="shortcut icon" href="Public/img/Icon/favicon.ico" type="image/x-icon">
-    <title>Entre Perros - Home</title>
+    <title>Entre Perros | Banda de rock - Home</title>
 </head>
 <body>
     <!-- Inicio del Header -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-black contenedor p-3">
+        <nav class="navbar contenedor navbar-expand-lg navbar-light bg-black p-3">
             <div class="container-fluid">
                 <a class="navbar-brand" href="./index.html">
                     <img class="zoom" src="./Public/img/Logo.png" alt="Logo de la Banda Entre Perros" width="125px">
@@ -23,7 +25,7 @@
                 </button>         
                 <div class="collapse navbar-collapse contenedor justify-content-end " id="navbarNav">
                     <ul class="navbar-nav menu">
-                        <li class="nav-item menu__item">
+                        <li class="nav-item menu__item ">
                             <a class="nav-link menu__link active" aria-current="page" href="./Public/Views/tour.html">Tour</a>
                         </li>
                         <li class="nav-item menu__item   active">
@@ -41,19 +43,19 @@
         </nav>
     </header>
     <!-- Fin del Header -->
-    <main class="main row contenedor">
-        <h1 data-aos="fade-right" data-aos-duration="1500" class="col-12 title contenedor title__responsive">Entre Perros</h1>
-        <section id="flex-row" class="column-responsive">
+    <main class="row contenedor ">
+        <h1 data-aos="fade-right" data-aos-duration="1500" class="col-12 title  title__responsive">Entre Perros</h1>
+        <section class="column-responsive">
             <article data-aos="fade-right" data-aos-duration="1500" class="text">
                 <p class="text__description">Con orígenes musicales inspirados en el folk rock y con presencia de algunos temas reggae en su repertorio, actualmente transita el género canción. Su rock llegado como de otra época, es una de las más gratas sorpresas de la temporada y todo parece indicar que su popularidad va a seguir creciendo durante 2022. Entre Perros se formó en El Palomar en el año 2008. La agrupación está integrada por Damián Sabatino en guitarra y coros, Hernán Sánchez en voz, armónica y guitarra, Ariel Sciacchitano en batería, Gabriel Peralta en teclados y Guillermo Iannino en bajo.</p>
             </article>
-            <div class="iframe justify-content-end">
+            <div class=" iframe justify-content-end">
                 <iframe class="iframe__video" width="560" height="315" src="https://www.youtube.com/embed/Bnnghs4_deU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
             </div>
         </section>
     </main>
     <footer class="col-lg-12">
-        <picture id="flex-row" class="flex-row pieDePagina contenedor">
+        <picture class="flex-row pieDePagina contenedor">
             <a class="pieDePagina__link contenedor" href="https://www.instagram.com/entreperros_/" target="_blank">
                 <img class="pieDePagina__image contenedor zoom__redes" src="Public/img/Icon/instagram-logo.png" alt="Instagram" style="width: 40px;">
             </a>
