Se aghrego SASS II + CEO v2

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </section>
     </main>
     <footer class="col-lg-12">
-        <picture class="flex-row pieDePagina contenedor">
+        <picture class="pieDePagina contenedor">
             <a class="pieDePagina__link contenedor" href="https://www.instagram.com/entreperros_/" target="_blank">
                 <img class="pieDePagina__image contenedor zoom__redes" src="Public/img/Icon/instagram-logo.png" alt="Instagram" style="width: 40px;">
             </a>
