--- a/index.html
+++ b/index.html
@@ -43,17 +43,21 @@
         </nav>
     </header>
     <!-- Fin del Header -->
+    <!-- Inicio del Main -->
     <main class="row contenedor ">
         <h1 data-aos="fade-right" data-aos-duration="1500" class="col-12 title  title__responsive">Entre Perros</h1>
         <section class="column-responsive">
             <article data-aos="fade-right" data-aos-duration="1500" class="text">
-                <p class="text__description">ENTRE PERROS presenta su flamante video clip titulado Ataduras y comienza a despedir “A donde vayas”, su segundo disco. Fue dirigido por Diego Salpurido (Calamaro, Benito Cerati, León Chalon, ENTRE OTROS) para Salpufilms y cuenta con la colaboración en voz de Juan Taleb de Los Caligaris.Con orígenes musicales inspirados en el folk rock y con presencia de algunos temas reggae en su repertorio, actualmente transita el género canción. Su rock llegado como de otra época, es una de las más gratas sorpresas de la temporada y todo parece indicar que su popularidad va a seguir creciendo durante 2022. Entre Perros se formó en El Palomar en el año 2008. La agrupación está integrada por Damián Sabatino en guitarra y coros, Hernán Sánchez en voz, armónica y guitarra, Ariel Sciacchitano en batería, Gabriel Peralta en teclados y Guillermo Iannino en bajo.</p>
+                <p class="text__description">ENTRE PERROS presenta su flamante video clip titulado Ataduras y comienza a despedir “A donde vayas”, su segundo disco. Fue dirigido por Diego Salpurido (Calamaro, Benito Cerati, León Chalon, ENTRE OTROS) para Salpufilms y cuenta con la colaboración en voz de Juan Taleb de Los Caligaris.Con orígenes musicales inspirados en el folk rock y con presencia de algunos temas reggae en su repertorio, actualmente transita el género canción. </p>
+                <p class="text__description">Su rock llegado como de otra época, es una de las más gratas sorpresas de la temporada y todo parece indicar que su popularidad va a seguir creciendo durante 2022. Entre Perros se formó en El Palomar en el año 2008. La agrupación está integrada por Damián Sabatino en guitarra y coros, Hernán Sánchez en voz, armónica y guitarra, Ariel Sciacchitano en batería, Gabriel Peralta en teclados y Guillermo Iannino en bajo.</p>
             </article>
-            <div class=" iframe justify-content-end">
-                <iframe class="iframe__video" width="560" height="315" src="https://www.youtube.com/embed/Bnnghs4_deU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
+            <div class="iframe">
+                <iframe class="iframe__video justify-content-center" width="560" height="315" src="https://www.youtube.com/embed/Bnnghs4_deU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
             </div>
         </section>
     </main>
+    <!-- Final del Main -->
+    <!-- Inicio del Footer -->
     <footer class="col-lg-12">
         <picture class="pieDePagina contenedor">
             <a class="pieDePagina__link contenedor" href="https://www.instagram.com/entreperros_/" target="_blank">
@@ -71,6 +75,7 @@
         </picture>
         <p class="pieDePagina__derechos contenedor">Todos los derechos reservados </p>
     </footer>
+    <!-- Final del Footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
